SERVER-60424 Have TenantOplogFetcher recreate cursors with initial maxTimeout